--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "serve": "json-server ./src/server/kinopoisk.json -p 8585",
+    "start": "concurrently \"npm run serve\" \"npm run dev\""
   },
   "dependencies": {
+    "concurrently": "^8.2.2",
     "json-server": "^1.0.0-alpha.21",
     "pinia": "^2.1.7",
     "vue": "^3.3.11",
