--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "start": "concurrently \"npm run serve\" \"npm run dev\""
   },
   "dependencies": {
+    "bootstrap": "^5.3.2",
+    "bootstrap-vue": "^2.23.1",
+    "bootstrap-vue-next": "^0.15.5",
     "concurrently": "^8.2.2",
     "json-server": "^1.0.0-alpha.21",
     "pinia": "^2.1.7",
