--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.2",
+    "node-sass": "^9.0.0",
+    "sass": "^1.69.7",
+    "sass-loader": "^14.0.0",
     "vite": "^5.0.10"
   }
 }
